# petoi-bittle-project

./: .gitignore  CLAUDE.md  LICENSE  README.md
docs/: MCP_PLAN.md  PROJECT_PLAN.md  controller-configuration.md  controller-map.md  reference-links.md
documentation/: reference-links.md
mcp/: README.md  pyproject.toml
mcp/src/bittle_mcp/: __init__.py  __main__.py  bluetooth.py  commands.py
mcp/tests/: conftest.py  test_bluetooth.py  test_commands.py  test_tools.py
