[project]
name = "bittle-mcp"
version = "0.1.0"
description = "MCP Server to control Petoi Bittle robot via Bluetooth"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Noah Workman" }
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "bleak>=0.22.0",  # Cross-platform Bluetooth LE
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
bittle-mcp = "bittle_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bittle_mcp"]
